[package]
name = "parser"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[dependencies]
log = "0.4.6"
rand = "0.6.5"

lexer = { path = "../lexer" }
diag = { path = "../diag" }
hir = { path = "../hir" }
fsm = { path = "../fsm" }
fsm-derive = { path = "../fsm-derive" }

[dev-dependencies]
env_logger = "0.6.1"

[features]
trace = []
